Réaménagement de l'espace Administrateur et création un menu fixe à la page version web et d'un menu déroulant version mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,8 @@ body {
 .box {
     background-color: #e8f3f9;
 }
+
+menu {
+    position: sticky;
+    top: 20%;
+}
